[package]
name = 'nbchain'
version = '0.1.0'
authors = ['hqwangningbo']
edition = '2021'
build = 'build.rs'

[[bin]]
name = 'nbchain'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
structopt = "0.3.8"
hex-literal = "0.3.3"
serde = { version = "1.0.119", features = ["derive"] }

# Substrate
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26", features = ["wasmtime"] }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26", features = ["wasmtime"] }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26", features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.14.0", features = ["server"] }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }

nbchain-runtime = { version = "0.1.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.26" }

[features]
default = []
runtime-benchmarks = ['nbchain-runtime/runtime-benchmarks']
